; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/chipc/extr_chipc_slicer.c_chipc_register_slicer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/chipc/extr_chipc_slicer.c_chipc_register_slicer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@chipc_slicer_spi = common dso_local global i32 0, align 4
@FLASH_SLICES_TYPE_SPI = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@chipc_slicer_cfi = common dso_local global i32 0, align 4
@FLASH_SLICES_TYPE_CFI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @chipc_register_slicer(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %14 [
    i32 129, label %4
    i32 128, label %4
    i32 130, label %9
  ]

4:                                                ; preds = %1, %1
  %5 = load i32, i32* @chipc_slicer_spi, align 4
  %6 = load i32, i32* @FLASH_SLICES_TYPE_SPI, align 4
  %7 = load i32, i32* @TRUE, align 4
  %8 = call i32 @flash_register_slicer(i32 %5, i32 %6, i32 %7)
  br label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @chipc_slicer_cfi, align 4
  %11 = load i32, i32* @FLASH_SLICES_TYPE_CFI, align 4
  %12 = load i32, i32* @TRUE, align 4
  %13 = call i32 @flash_register_slicer(i32 %10, i32 %11, i32 %12)
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %9, %4
  ret void
}

declare dso_local i32 @flash_register_slicer(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
